# constraint-physics

./: Cargo.toml  README.md
docs/: BENCHMARKS.md  COMPARISON.md  THEORY.md
src/: body.rs  constraint.rs  demo.rs  graph.rs  lib.rs  main.rs  shape.rs  vec2.rs  world.rs
tests/: physics_tests.rs
