[package]
license = "MIT"
name = "constraint-physics"
version = "0.1.0"
edition = "2024"
description = "ZHC constraint-based physics — physics without integration"
authors = ["SuperInstance"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"

[features]
default = []

[profile.release]
opt-level = 3
lto = true
